# mozart

./: CMakeLists.txt  README.md  main.cpp
include/: edit_distance.hpp
include /: edit_distance.h
src/: edit_distance.cpp  edit_distance.hpp  main.cpp
test/: in.t  test.sh
